Entregable 3/Entregable 3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CLAVE_PRIMA
    CLAVE_REFERENTE
    COMO_MUCHO
    ES_NULO
    EXISTE
    ORDENA_POR
    PARECIDO_A
    POR_DEFECTO
    TRANSFORMA_A
    UNICO

Grammar

Rule 0     S' -> query
Rule 1     query -> TRAEME seleccion DE_LA_TABLA tabla opcionales
Rule 2     query -> METE_EN tabla LPAREN columnas RPAREN LOS_VALORES LPAREN valores RPAREN
Rule 3     query -> ACTUALIZA tabla SETEA columna comparador valor opcionales
Rule 4     query -> BORRA_DE_LA tabla opcionales
Rule 5     query -> CAMBIA_LA_TABLA tabla alter_opcionales
Rule 6     opcionales -> where opcionales
Rule 7     opcionales -> group opcionales
Rule 8     opcionales -> having opcionales
Rule 9     opcionales -> join opcionales
Rule 10    opcionales -> empty
Rule 11    join -> MEZCLANDO tabla EN columna comparador columna
Rule 12    join -> empty
Rule 13    group -> AGRUPANDO_POR columna
Rule 14    group -> empty
Rule 15    having -> WHERE_DEL_GROUP_BY condicion
Rule 16    having -> WHERE_DEL_GROUP_BY seleccion
Rule 17    having -> empty
Rule 18    where -> DONDE condicion
Rule 19    where -> empty
Rule 20    add -> AGREGA_LA_COLUMNA columna tipo_dato constraint
Rule 21    drop_column -> ELIMINA_LA_COLUMNA columna
Rule 22    drop_column -> empty
Rule 23    condicion -> columna comparador valor
Rule 24    condicion -> columna ENTRE valor COMMA valor
Rule 25    condicion -> columna ENTRE valor Y valor
Rule 26    rename -> RENOMBRA columna valor
Rule 27    rename -> empty
Rule 28    create -> CREA_LA_TABLA tabla
Rule 29    create -> empty
Rule 30    drop_table -> TIRA_LA_TABLA tabla
Rule 31    drop_table -> empty
Rule 32    alter_opcionales -> add alter_opcionales
Rule 33    alter_opcionales -> create alter_opcionales
Rule 34    alter_opcionales -> drop_table alter_opcionales
Rule 35    alter_opcionales -> drop_column alter_opcionales
Rule 36    alter_opcionales -> empty
Rule 37    seleccion -> TODO
Rule 38    seleccion -> columna
Rule 39    seleccion -> LOS_DISTINTOS columna
Rule 40    seleccion -> CONTANDO LPAREN ASTERISK RPAREN
Rule 41    seleccion -> CONTANDO LPAREN TODO RPAREN
Rule 42    tabla -> ID
Rule 43    columna -> ID
Rule 44    columnas -> columna
Rule 45    columnas -> columna COMMA columnas
Rule 46    comparador -> COMPARADORES
Rule 47    comparador -> empty
Rule 48    valor -> NUMBER
Rule 49    valor -> ID
Rule 50    valor -> STRING
Rule 51    valor -> LPAREN valor RPAREN
Rule 52    valores -> valor
Rule 53    valores -> valor COMMA valores
Rule 54    tipo_dato -> ID LPAREN NUMBER RPAREN
Rule 55    tipo_dato -> ID
Rule 56    constraint -> NO_NULO
Rule 57    constraint -> empty
Rule 58    empty -> <empty>

Terminals, with rules where they appear

ACTUALIZA            : 3
AGREGA_LA_COLUMNA    : 20
AGRUPANDO_POR        : 13
ASTERISK             : 40
BORRA_DE_LA          : 4
CAMBIA_LA_TABLA      : 5
CLAVE_PRIMA          : 
CLAVE_REFERENTE      : 
COMMA                : 24 45 53
COMO_MUCHO           : 
COMPARADORES         : 46
CONTANDO             : 40 41
CREA_LA_TABLA        : 28
DE_LA_TABLA          : 1
DONDE                : 18
ELIMINA_LA_COLUMNA   : 21
EN                   : 11
ENTRE                : 24 25
ES_NULO              : 
EXISTE               : 
ID                   : 42 43 49 54 55
LOS_DISTINTOS        : 39
LOS_VALORES          : 2
LPAREN               : 2 2 40 41 51 54
METE_EN              : 2
MEZCLANDO            : 11
NO_NULO              : 56
NUMBER               : 48 54
ORDENA_POR           : 
PARECIDO_A           : 
POR_DEFECTO          : 
RENOMBRA             : 26
RPAREN               : 2 2 40 41 51 54
SETEA                : 3
STRING               : 50
TIRA_LA_TABLA        : 30
TODO                 : 37 41
TRAEME               : 1
TRANSFORMA_A         : 
UNICO                : 
WHERE_DEL_GROUP_BY   : 15 16
Y                    : 25
error                : 

Nonterminals, with rules where they appear

add                  : 32
alter_opcionales     : 5 32 33 34 35
columna              : 3 11 11 13 20 21 23 24 25 26 38 39 44 45
columnas             : 2 45
comparador           : 3 11 23
condicion            : 15 18
constraint           : 20
create               : 33
drop_column          : 35
drop_table           : 34
empty                : 10 12 14 17 19 22 27 29 31 36 47 57
group                : 7
having               : 8
join                 : 9
opcionales           : 1 3 4 6 7 8 9
query                : 0
rename               : 
seleccion            : 1 16
tabla                : 1 2 3 4 5 11 28 30
tipo_dato            : 20
valor                : 3 23 24 24 25 25 26 51 52 53
valores              : 2 53
where                : 6

Parsing method: LALR

state 0

    (0) S' -> . query
    (1) query -> . TRAEME seleccion DE_LA_TABLA tabla opcionales
    (2) query -> . METE_EN tabla LPAREN columnas RPAREN LOS_VALORES LPAREN valores RPAREN
    (3) query -> . ACTUALIZA tabla SETEA columna comparador valor opcionales
    (4) query -> . BORRA_DE_LA tabla opcionales
    (5) query -> . CAMBIA_LA_TABLA tabla alter_opcionales

    TRAEME          shift and go to state 2
    METE_EN         shift and go to state 3
    ACTUALIZA       shift and go to state 4
    BORRA_DE_LA     shift and go to state 5
    CAMBIA_LA_TABLA shift and go to state 6

    query                          shift and go to state 1

state 1

    (0) S' -> query .



state 2

    (1) query -> TRAEME . seleccion DE_LA_TABLA tabla opcionales
    (37) seleccion -> . TODO
    (38) seleccion -> . columna
    (39) seleccion -> . LOS_DISTINTOS columna
    (40) seleccion -> . CONTANDO LPAREN ASTERISK RPAREN
    (41) seleccion -> . CONTANDO LPAREN TODO RPAREN
    (43) columna -> . ID

    TODO            shift and go to state 8
    LOS_DISTINTOS   shift and go to state 10
    CONTANDO        shift and go to state 11
    ID              shift and go to state 12

    seleccion                      shift and go to state 7
    columna                        shift and go to state 9

state 3

    (2) query -> METE_EN . tabla LPAREN columnas RPAREN LOS_VALORES LPAREN valores RPAREN
    (42) tabla -> . ID

    ID              shift and go to state 14

    tabla                          shift and go to state 13

state 4

    (3) query -> ACTUALIZA . tabla SETEA columna comparador valor opcionales
    (42) tabla -> . ID

    ID              shift and go to state 14

    tabla                          shift and go to state 15

state 5

    (4) query -> BORRA_DE_LA . tabla opcionales
    (42) tabla -> . ID

    ID              shift and go to state 14

    tabla                          shift and go to state 16

state 6

    (5) query -> CAMBIA_LA_TABLA . tabla alter_opcionales
    (42) tabla -> . ID

    ID              shift and go to state 14

    tabla                          shift and go to state 17

state 7

    (1) query -> TRAEME seleccion . DE_LA_TABLA tabla opcionales

    DE_LA_TABLA     shift and go to state 18


state 8

    (37) seleccion -> TODO .

    DE_LA_TABLA     reduce using rule 37 (seleccion -> TODO .)
    DONDE           reduce using rule 37 (seleccion -> TODO .)
    AGRUPANDO_POR   reduce using rule 37 (seleccion -> TODO .)
    WHERE_DEL_GROUP_BY reduce using rule 37 (seleccion -> TODO .)
    MEZCLANDO       reduce using rule 37 (seleccion -> TODO .)
    $end            reduce using rule 37 (seleccion -> TODO .)


state 9

    (38) seleccion -> columna .

    DE_LA_TABLA     reduce using rule 38 (seleccion -> columna .)


state 10

    (39) seleccion -> LOS_DISTINTOS . columna
    (43) columna -> . ID

    ID              shift and go to state 12

    columna                        shift and go to state 19

state 11

    (40) seleccion -> CONTANDO . LPAREN ASTERISK RPAREN
    (41) seleccion -> CONTANDO . LPAREN TODO RPAREN

    LPAREN          shift and go to state 20


state 12

    (43) columna -> ID .

    DE_LA_TABLA     reduce using rule 43 (columna -> ID .)
    DONDE           reduce using rule 43 (columna -> ID .)
    AGRUPANDO_POR   reduce using rule 43 (columna -> ID .)
    WHERE_DEL_GROUP_BY reduce using rule 43 (columna -> ID .)
    MEZCLANDO       reduce using rule 43 (columna -> ID .)
    $end            reduce using rule 43 (columna -> ID .)
    COMMA           reduce using rule 43 (columna -> ID .)
    RPAREN          reduce using rule 43 (columna -> ID .)
    COMPARADORES    reduce using rule 43 (columna -> ID .)
    NUMBER          reduce using rule 43 (columna -> ID .)
    ID              reduce using rule 43 (columna -> ID .)
    STRING          reduce using rule 43 (columna -> ID .)
    LPAREN          reduce using rule 43 (columna -> ID .)
    ENTRE           reduce using rule 43 (columna -> ID .)
    AGREGA_LA_COLUMNA reduce using rule 43 (columna -> ID .)
    CREA_LA_TABLA   reduce using rule 43 (columna -> ID .)
    TIRA_LA_TABLA   reduce using rule 43 (columna -> ID .)
    ELIMINA_LA_COLUMNA reduce using rule 43 (columna -> ID .)


state 13

    (2) query -> METE_EN tabla . LPAREN columnas RPAREN LOS_VALORES LPAREN valores RPAREN

    LPAREN          shift and go to state 21


state 14

    (42) tabla -> ID .

    LPAREN          reduce using rule 42 (tabla -> ID .)
    SETEA           reduce using rule 42 (tabla -> ID .)
    DONDE           reduce using rule 42 (tabla -> ID .)
    AGRUPANDO_POR   reduce using rule 42 (tabla -> ID .)
    WHERE_DEL_GROUP_BY reduce using rule 42 (tabla -> ID .)
    MEZCLANDO       reduce using rule 42 (tabla -> ID .)
    $end            reduce using rule 42 (tabla -> ID .)
    AGREGA_LA_COLUMNA reduce using rule 42 (tabla -> ID .)
    CREA_LA_TABLA   reduce using rule 42 (tabla -> ID .)
    TIRA_LA_TABLA   reduce using rule 42 (tabla -> ID .)
    ELIMINA_LA_COLUMNA reduce using rule 42 (tabla -> ID .)
    EN              reduce using rule 42 (tabla -> ID .)


state 15

    (3) query -> ACTUALIZA tabla . SETEA columna comparador valor opcionales

    SETEA           shift and go to state 22


state 16

    (4) query -> BORRA_DE_LA tabla . opcionales
    (6) opcionales -> . where opcionales
    (7) opcionales -> . group opcionales
    (8) opcionales -> . having opcionales
    (9) opcionales -> . join opcionales
    (10) opcionales -> . empty
    (18) where -> . DONDE condicion
    (19) where -> . empty
    (13) group -> . AGRUPANDO_POR columna
    (14) group -> . empty
    (15) having -> . WHERE_DEL_GROUP_BY condicion
    (16) having -> . WHERE_DEL_GROUP_BY seleccion
    (17) having -> . empty
    (11) join -> . MEZCLANDO tabla EN columna comparador columna
    (12) join -> . empty
    (58) empty -> .

  ! shift/reduce conflict for DONDE resolved as shift
  ! shift/reduce conflict for AGRUPANDO_POR resolved as shift
  ! shift/reduce conflict for WHERE_DEL_GROUP_BY resolved as shift
  ! shift/reduce conflict for MEZCLANDO resolved as shift
    DONDE           shift and go to state 29
    AGRUPANDO_POR   shift and go to state 30
    WHERE_DEL_GROUP_BY shift and go to state 31
    MEZCLANDO       shift and go to state 32
    $end            reduce using rule 58 (empty -> .)

  ! DONDE           [ reduce using rule 58 (empty -> .) ]
  ! AGRUPANDO_POR   [ reduce using rule 58 (empty -> .) ]
  ! WHERE_DEL_GROUP_BY [ reduce using rule 58 (empty -> .) ]
  ! MEZCLANDO       [ reduce using rule 58 (empty -> .) ]

    opcionales                     shift and go to state 23
    where                          shift and go to state 24
    group                          shift and go to state 25
    having                         shift and go to state 26
    join                           shift and go to state 27
    empty                          shift and go to state 28

state 17

    (5) query -> CAMBIA_LA_TABLA tabla . alter_opcionales
    (32) alter_opcionales -> . add alter_opcionales
    (33) alter_opcionales -> . create alter_opcionales
    (34) alter_opcionales -> . drop_table alter_opcionales
    (35) alter_opcionales -> . drop_column alter_opcionales
    (36) alter_opcionales -> . empty
    (20) add -> . AGREGA_LA_COLUMNA columna tipo_dato constraint
    (28) create -> . CREA_LA_TABLA tabla
    (29) create -> . empty
    (30) drop_table -> . TIRA_LA_TABLA tabla
    (31) drop_table -> . empty
    (21) drop_column -> . ELIMINA_LA_COLUMNA columna
    (22) drop_column -> . empty
    (58) empty -> .

  ! shift/reduce conflict for AGREGA_LA_COLUMNA resolved as shift
  ! shift/reduce conflict for CREA_LA_TABLA resolved as shift
  ! shift/reduce conflict for TIRA_LA_TABLA resolved as shift
  ! shift/reduce conflict for ELIMINA_LA_COLUMNA resolved as shift
    AGREGA_LA_COLUMNA shift and go to state 39
    CREA_LA_TABLA   shift and go to state 40
    TIRA_LA_TABLA   shift and go to state 41
    ELIMINA_LA_COLUMNA shift and go to state 42
    $end            reduce using rule 58 (empty -> .)

  ! AGREGA_LA_COLUMNA [ reduce using rule 58 (empty -> .) ]
  ! CREA_LA_TABLA   [ reduce using rule 58 (empty -> .) ]
  ! TIRA_LA_TABLA   [ reduce using rule 58 (empty -> .) ]
  ! ELIMINA_LA_COLUMNA [ reduce using rule 58 (empty -> .) ]

    alter_opcionales               shift and go to state 33
    add                            shift and go to state 34
    create                         shift and go to state 35
    drop_table                     shift and go to state 36
    drop_column                    shift and go to state 37
    empty                          shift and go to state 38

state 18

    (1) query -> TRAEME seleccion DE_LA_TABLA . tabla opcionales
    (42) tabla -> . ID

    ID              shift and go to state 14

    tabla                          shift and go to state 43

state 19

    (39) seleccion -> LOS_DISTINTOS columna .

    DE_LA_TABLA     reduce using rule 39 (seleccion -> LOS_DISTINTOS columna .)
    DONDE           reduce using rule 39 (seleccion -> LOS_DISTINTOS columna .)
    AGRUPANDO_POR   reduce using rule 39 (seleccion -> LOS_DISTINTOS columna .)
    WHERE_DEL_GROUP_BY reduce using rule 39 (seleccion -> LOS_DISTINTOS columna .)
    MEZCLANDO       reduce using rule 39 (seleccion -> LOS_DISTINTOS columna .)
    $end            reduce using rule 39 (seleccion -> LOS_DISTINTOS columna .)


state 20

    (40) seleccion -> CONTANDO LPAREN . ASTERISK RPAREN
    (41) seleccion -> CONTANDO LPAREN . TODO RPAREN

    ASTERISK        shift and go to state 44
    TODO            shift and go to state 45


state 21

    (2) query -> METE_EN tabla LPAREN . columnas RPAREN LOS_VALORES LPAREN valores RPAREN
    (44) columnas -> . columna
    (45) columnas -> . columna COMMA columnas
    (43) columna -> . ID

    ID              shift and go to state 12

    columnas                       shift and go to state 46
    columna                        shift and go to state 47

state 22

    (3) query -> ACTUALIZA tabla SETEA . columna comparador valor opcionales
    (43) columna -> . ID

    ID              shift and go to state 12

    columna                        shift and go to state 48

state 23

    (4) query -> BORRA_DE_LA tabla opcionales .

    $end            reduce using rule 4 (query -> BORRA_DE_LA tabla opcionales .)


state 24

    (6) opcionales -> where . opcionales
    (6) opcionales -> . where opcionales
    (7) opcionales -> . group opcionales
    (8) opcionales -> . having opcionales
    (9) opcionales -> . join opcionales
    (10) opcionales -> . empty
    (18) where -> . DONDE condicion
    (19) where -> . empty
    (13) group -> . AGRUPANDO_POR columna
    (14) group -> . empty
    (15) having -> . WHERE_DEL_GROUP_BY condicion
    (16) having -> . WHERE_DEL_GROUP_BY seleccion
    (17) having -> . empty
    (11) join -> . MEZCLANDO tabla EN columna comparador columna
    (12) join -> . empty
    (58) empty -> .

  ! shift/reduce conflict for DONDE resolved as shift
  ! shift/reduce conflict for AGRUPANDO_POR resolved as shift
  ! shift/reduce conflict for WHERE_DEL_GROUP_BY resolved as shift
  ! shift/reduce conflict for MEZCLANDO resolved as shift
    DONDE           shift and go to state 29
    AGRUPANDO_POR   shift and go to state 30
    WHERE_DEL_GROUP_BY shift and go to state 31
    MEZCLANDO       shift and go to state 32
    $end            reduce using rule 58 (empty -> .)

  ! DONDE           [ reduce using rule 58 (empty -> .) ]
  ! AGRUPANDO_POR   [ reduce using rule 58 (empty -> .) ]
  ! WHERE_DEL_GROUP_BY [ reduce using rule 58 (empty -> .) ]
  ! MEZCLANDO       [ reduce using rule 58 (empty -> .) ]

    where                          shift and go to state 24
    opcionales                     shift and go to state 49
    group                          shift and go to state 25
    having                         shift and go to state 26
    join                           shift and go to state 27
    empty                          shift and go to state 28

state 25

    (7) opcionales -> group . opcionales
    (6) opcionales -> . where opcionales
    (7) opcionales -> . group opcionales
    (8) opcionales -> . having opcionales
    (9) opcionales -> . join opcionales
    (10) opcionales -> . empty
    (18) where -> . DONDE condicion
    (19) where -> . empty
    (13) group -> . AGRUPANDO_POR columna
    (14) group -> . empty
    (15) having -> . WHERE_DEL_GROUP_BY condicion
    (16) having -> . WHERE_DEL_GROUP_BY seleccion
    (17) having -> . empty
    (11) join -> . MEZCLANDO tabla EN columna comparador columna
    (12) join -> . empty
    (58) empty -> .

  ! shift/reduce conflict for DONDE resolved as shift
  ! shift/reduce conflict for AGRUPANDO_POR resolved as shift
  ! shift/reduce conflict for WHERE_DEL_GROUP_BY resolved as shift
  ! shift/reduce conflict for MEZCLANDO resolved as shift
    DONDE           shift and go to state 29
    AGRUPANDO_POR   shift and go to state 30
    WHERE_DEL_GROUP_BY shift and go to state 31
    MEZCLANDO       shift and go to state 32
    $end            reduce using rule 58 (empty -> .)

  ! DONDE           [ reduce using rule 58 (empty -> .) ]
  ! AGRUPANDO_POR   [ reduce using rule 58 (empty -> .) ]
  ! WHERE_DEL_GROUP_BY [ reduce using rule 58 (empty -> .) ]
  ! MEZCLANDO       [ reduce using rule 58 (empty -> .) ]

    group                          shift and go to state 25
    opcionales                     shift and go to state 50
    where                          shift and go to state 24
    having                         shift and go to state 26
    join                           shift and go to state 27
    empty                          shift and go to state 28

state 26

    (8) opcionales -> having . opcionales
    (6) opcionales -> . where opcionales
    (7) opcionales -> . group opcionales
    (8) opcionales -> . having opcionales
    (9) opcionales -> . join opcionales
    (10) opcionales -> . empty
    (18) where -> . DONDE condicion
    (19) where -> . empty
    (13) group -> . AGRUPANDO_POR columna
    (14) group -> . empty
    (15) having -> . WHERE_DEL_GROUP_BY condicion
    (16) having -> . WHERE_DEL_GROUP_BY seleccion
    (17) having -> . empty
    (11) join -> . MEZCLANDO tabla EN columna comparador columna
    (12) join -> . empty
    (58) empty -> .

  ! shift/reduce conflict for DONDE resolved as shift
  ! shift/reduce conflict for AGRUPANDO_POR resolved as shift
  ! shift/reduce conflict for WHERE_DEL_GROUP_BY resolved as shift
  ! shift/reduce conflict for MEZCLANDO resolved as shift
    DONDE           shift and go to state 29
    AGRUPANDO_POR   shift and go to state 30
    WHERE_DEL_GROUP_BY shift and go to state 31
    MEZCLANDO       shift and go to state 32
    $end            reduce using rule 58 (empty -> .)

  ! DONDE           [ reduce using rule 58 (empty -> .) ]
  ! AGRUPANDO_POR   [ reduce using rule 58 (empty -> .) ]
  ! WHERE_DEL_GROUP_BY [ reduce using rule 58 (empty -> .) ]
  ! MEZCLANDO       [ reduce using rule 58 (empty -> .) ]

    having                         shift and go to state 26
    opcionales                     shift and go to state 51
    where                          shift and go to state 24
    group                          shift and go to state 25
    join                           shift and go to state 27
    empty                          shift and go to state 28

state 27

    (9) opcionales -> join . opcionales
    (6) opcionales -> . where opcionales
    (7) opcionales -> . group opcionales
    (8) opcionales -> . having opcionales
    (9) opcionales -> . join opcionales
    (10) opcionales -> . empty
    (18) where -> . DONDE condicion
    (19) where -> . empty
    (13) group -> . AGRUPANDO_POR columna
    (14) group -> . empty
    (15) having -> . WHERE_DEL_GROUP_BY condicion
    (16) having -> . WHERE_DEL_GROUP_BY seleccion
    (17) having -> . empty
    (11) join -> . MEZCLANDO tabla EN columna comparador columna
    (12) join -> . empty
    (58) empty -> .

  ! shift/reduce conflict for DONDE resolved as shift
  ! shift/reduce conflict for AGRUPANDO_POR resolved as shift
  ! shift/reduce conflict for WHERE_DEL_GROUP_BY resolved as shift
  ! shift/reduce conflict for MEZCLANDO resolved as shift
    DONDE           shift and go to state 29
    AGRUPANDO_POR   shift and go to state 30
    WHERE_DEL_GROUP_BY shift and go to state 31
    MEZCLANDO       shift and go to state 32
    $end            reduce using rule 58 (empty -> .)

  ! DONDE           [ reduce using rule 58 (empty -> .) ]
  ! AGRUPANDO_POR   [ reduce using rule 58 (empty -> .) ]
  ! WHERE_DEL_GROUP_BY [ reduce using rule 58 (empty -> .) ]
  ! MEZCLANDO       [ reduce using rule 58 (empty -> .) ]

